Bug 1109486 - Unconditionally use UTF-8 as default Charset. r=smaug